[package]
name = "Payment_Api"
version = "0.1.0"
edition = "2021"

[dependencies]
configuration= { path = "./configuration" }
errors= { path = "./errors" }
client = { path = "./client" }
utils={path = "./utils"}
state={path = "./state"}
server={path = "./server"}
router={path = "./router"}
handler={path = "./handler"}
response={path = "./response"}
cmd={path = "./cmd"}
logger={path = "./logger"}
constants={path = "./constants"}


