[package]
name = "errors"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.1.0"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio-tungstenite = "0.21.0"
uuid = "1.8.0"
reqwest = "0.12.4"
config = "0.14.0"
serde_json = "1.0.117"
tokio = "1.37.0"
base64 = "0.22.1"
anyhow = "1.0.86"
axum = "0.7.5"
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
strum = { version = "0.26.2", features = ["derive"] }
