[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[dependencies.errors]
path= "../errors"

[dependencies]
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
anyhow = "1.0.86"
